--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <a class="text-white px-3" href="https://www.facebook.com/sergioandres.toro.1" target="_blank">
             <i class="fab fa-facebook-f"></i>
           </a>
-          <a class="text-white px-3" href="/">
+          <a class="text-white px-3" href="assets/not-found/index.html">
             <i class="fab fa-twitter"></i>
           </a>
           <a class="text-white px-3" href="https://www.linkedin.com/in/sergio-andres-toro-mendoza-32471b196/" target="_blank">
