mas cambios buenardos

--- a/assets/GIFS/gif2.html
+++ b/assets/GIFS/gif2.html
@@ -10,7 +10,7 @@
     <style>
         /* Estilos para el fondo rosado */
         body {
-            background-color: rgb(192, 255, 241);
+            background-color: pink;
             margin: 0;
             display: flex;
             justify-content: center;
@@ -34,7 +34,7 @@
 
 <body>
     <div class="gif-container">
-        <img src="imgs/1063167_4a989.gif" alt="GIF en el centro">
+        <img src="imgs/kiss.gif" alt="GIF en el centro">
     </div>
 
     <footer>
