--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>iCREAM - Ice Cream Shop Website Template</title>
+  <title>Mi Regalo para ti</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="Free HTML Templates" name="keywords">
   <meta content="Free HTML Templates" name="description">
@@ -27,35 +27,33 @@
 </head>
 
 <body>
+
+<div id="cronometro" style="display: none;">Tiempo restante: <span id="tiempo">4</span> segundos</div>
+
   <!-- Topbar Start -->
   <div class="container-fluid bg-primary py-3 d-none d-md-block">
     <div class="container">
       <div class="row">
         <div class="col-md-6 text-center text-lg-left mb-2 mb-lg-0">
-          <div class="d-inline-flex align-items-center">
+          <div class="d-inline-flex align-items-center">            
+            <a class="text-white pr-3" href="assets/not-found/index.html" target="_blank">Ayuda</a>
             <span class="text-white">|</span>
-            <a class="text-white px-3" href="assets/not-found/index.html" target="_blank">Ayuda</a>
-            <span class="text-white">|</span>
-            <a class="text-white pl-3" href="https://media.tenor.com/FuAsxNcsk24AAAAC/kiss.gif" target="_blank">Te quiero hacer saber cuanto te amo</a>
+            <a class="text-white pl-3" href="assets/GIFS/gif3.html" >Te Amo</a>
           </div>
         </div>
         <div class="col-md-6 text-center text-lg-right">
           <div class="d-inline-flex align-items-center">
-            <a class="text-white px-3" href="https://www.facebook.com/sergioandres.toro.1" target="_blank">
-              <i class="fab fa-facebook-f"></i>
-            </a>
-            <a class="text-white px-3" href="assets/not-found/index.html" target="_blank">
-              <i class="fab fa-twitter"></i>
-            </a>
-            <a class="text-white px-3" href="https://www.linkedin.com/in/sergio-andres-toro-mendoza-32471b196/"
+            <a class="text-white px-3"
+              href="https://www.facebook.com/photo/?fbid=708521491305118&set=pb.100064418195652.-2207520000"
               target="_blank">
-              <i class="fab fa-linkedin-in"></i>
-            </a>
-            <a class="text-white px-3" href="https://www.instagram.com/andres_toro19_/" target="_blank">
+              <i class="fab fa-facebook-f"></i>
+            </a>                       
+            <a class="text-white px-3" href="https://www.instagram.com/p/CxbS1QePWh2/" target="_blank">
               <i class="fab fa-instagram"></i>
             </a>
-            <a class="text-white pl-3" href="https://www.youtube.com/@arrozchino3436/featured" target="_blank">
+            <a class="text-white pl-3" href="https://www.youtube.com/watch?v=_gU9kX7zBxc&ab_channel=%E2%80%A2Liliam%E2%80%A2" target="_blank">
               <i class="fab fa-youtube"></i>
+              <!--https://www.youtube.com/@arrozchino3436/featured      style="display: none;"   -->
             </a>
           </div>
         </div>
@@ -66,6 +64,9 @@
   <!--para que no se vea un blanco ahi-->
   <div class="container-fluid bg-primary py-4 d-none d-md-block capa-superpuesta"></div>
 
+
+
+  
 
   <!-- Navbar Start -->
   <div class="move">
@@ -108,8 +109,8 @@
             <div class="p-3" style="max-width: 900px;">
               <h4 class="text-white text-uppercase mb-md-3">Eres todo lo que soñé</h4>
               <h1 class="display-3 text-white mb-md-4">Cada día me gustas más, te quiero hacer muy feliz</h1>
-              <a href="https://media.tenor.com/2AdH3G3pLwYAAAAC/te-amo.gif"
-                class="btn btn-primary py-md-3 px-md-5 mt-2" target="_blank">TE AMO</a>
+              <a href="assets/GIFS/gif2.html"
+                class="btn btn-primary py-md-3 px-md-5 mt-2" >TE AMO</a>
             </div>
           </div>
         </div>
@@ -119,8 +120,8 @@
             <div class="p-3" style="max-width: 900px;">
               <h4 class="text-white text-uppercase mb-md-3">Te Amo mi Vida</h4>
               <h1 class="display-3 text-white mb-md-4">Leidy eres fabulosa, increible, hermosa bella y adorable!!</h1>
-              <a href="https://cdn.shopify.com/s/files/1/0366/3029/8756/files/te_amo_480x480.jpg?v=1614121984"
-                class="btn btn-primary py-md-3 px-md-5 mt-2" target="_blank">TE AMO MAS</a>
+              <a href="assets/GIFS/gif1.html"
+                class="btn btn-primary py-md-3 px-md-5 mt-2">TE AMO MAS</a>
             </div>
           </div>
         </div>
@@ -140,6 +141,9 @@
   <!-- Carousel End -->
 
 
+
+
+
   <!-- Footer Start -->
   <div class="container-fluid footer bg-light py-5" style="margin-top: 90px;">
     <div class="container text-center py-5">
@@ -147,45 +151,34 @@
         <div class="col-12 mb-4">
           <a href="index.html" class="navbar-brand m-0">
             <h1 class="m-0 mt-n2 display-4 text-primary"><span class="text-secondary">Leidy</span> tu eres siempre la
-              respuesta</h1>
-            <h1 class="m-0 mt-n2 display-4 text-primary">cuando me preguntan</h1>
-            <h1 class="m-0 mt-n2 display-4 text-primary">en que estoy pensando<span class="text-secondary">.</span></h1>
+              respuesta<span class="text-secondary">,</span></h1>
+            <h1 class="m-0 mt-n2 display-4 text-primary">Tu eres la mujer mas linda<span class="text-secondary">,</span></h1>
+            <h1 class="m-0 mt-n2 display-4 text-primary">Mi sol mi luz</h1>
+            <h1 class="m-0 mt-n2 display-4 text-primary">Gracias por hacerme tan feliz<span class="text-secondary">.</span></h1>
+            <br><br>
+
+            <img class="w-25" src="img/feliz.png" alt="Image">
 
           </a>
-        </div>
-        <div class="col-12 mb-4">
-          <a class="btn btn-outline-secondary btn-social mr-2" href="#"><i class="fab fa-twitter"></i></a>
-          <a class="btn btn-outline-secondary btn-social mr-2" href="#"><i class="fab fa-facebook-f"></i></a>
-          <a class="btn btn-outline-secondary btn-social mr-2" href="#"><i class="fab fa-linkedin-in"></i></a>
-          <a class="btn btn-outline-secondary btn-social" href="#"><i class="fab fa-instagram"></i></a>
-        </div>
-        <div class="col-12 mt-2 mb-4">
-          <div class="row">
-            <div class="col-sm-6 text-center text-sm-right border-right mb-3 mb-sm-0">
-              <h5 class="font-weight-bold mb-2">Get In Touch</h5>
-              <p class="mb-2">123 Street, New York, USA</p>
-              <p class="mb-0">+012 345 67890</p>
-            </div>
-            <div class="col-sm-6 text-center text-sm-left">
-              <h5 class="font-weight-bold mb-2">Opening Hours</h5>
-              <p class="mb-2">Mon – Sat, 8AM – 5PM</p>
-              <p class="mb-0">Sunday: Closed</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-12">
-          <p class="m-0">&copy; <a href="#">Domain</a>. All Rights Reserved. Designed by <a
-              href="https://htmlcodex.com">HTML Codex</a>
-          </p>
-        </div>
+        </div>    
       </div>
     </div>
   </div>
   <!-- Footer End -->
 
 
-  <!-- Back to Top -->
+  <!-- volver arriba -->
   <a href="#" class="btn btn-secondary px-2 back-to-top"><i class="fa fa-angle-double-up"></i></a>
+
+
+
+
+  <!--boton-->
+  <img id="boton" class="mi-boton" src="img/panda.png" alt="Botón" style="display: none;"  onclick="mostrarBoton('boton')">
+   <!-- Elemento HTML para mostrar el cronómetro -->
+   
+  
+
 
 
   <!-- JavaScript Libraries -->
@@ -203,6 +196,122 @@
 
   <!-- Template Javascript -->
   <script src="js/main.js"></script>
+  
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
+
+
+
+  <!--mover boton-->
+  <script>    
+  //variables
+    let cont=0;
+    const cronometro = document.getElementById("cronometro");
+    let segundos = 4; // Establece el tiempo inicial en segundos
+
+    // Mostrar el botón después de un breve retraso (por ejemplo, 2 segundos)
+    setTimeout(function() {
+    Swal.fire({
+    title:'Jueguito', text:'Amorrr tienes que dar click 5 veces seguidas sobre Pandita en la pantalla antes de que acabe el tiempo',
+    background: '#F7E384' , color: '#716add',
+    imageUrl: 'img/cat.jpg',
+    imageWidth: 200,
+    imageHeight: 200,
+    showDenyButton: true,
+    showCancelButton: false,
+    confirmButtonText: 'Jugar',
+    denyButtonText: `No jugar`,
+    }).then((result) => {
+        if (result.isConfirmed) {          
+          boton.style.display = "block";
+          cronometro.style.display = "block";
+          window.scrollTo(0, 0);
+          iniciarCronometro();
+        } else if (result.isDenied) {
+          boton.style.display = "none";
+          cronometro.style.display = "none";
+        }
+
+
+
+        
+      })//al dar click en el alert meustra el boton
+    mostrarBoton("boton");
+
+    }, 3000);
+  
+        // Función para obtener una posición aleatoria en la pantalla
+    function obtenerPosicionAleatoria() {
+        const anchoVentana = window.innerWidth;
+        const altoVentana = window.innerHeight;
+
+        const x = Math.random() * (anchoVentana - 100);
+        const y = Math.random() * (altoVentana - 100); 
+
+        return { x, y };
+    }
+        //Funcion para ubicar el icono
+    function mostrarBoton(name) {
+        const boton = document.getElementById(name);        
+        const posicion = obtenerPosicionAleatoria();
+
+        boton.style.left = `${posicion.x}px`;
+        boton.style.top = `${posicion.y}px`;    
+        
+        cont=cont+1;
+        console.log(cont);
+
+
+        if (cont===6){
+          Swal.fire({
+          title:'Wiii Te ganaste unos Besos <3',
+          text:'¡¡Muy bien amor ganaste el minijuego!!',
+          icon:'success',
+          background: '#F7E384',
+          color: '#716add',
+          imageUrl: 'img/av.gif',
+          });
+          boton.style.display = "none";
+          cronometro.style.display = "none";
+        }
+        // Animación suave usando CSS transitions
+        //boton.style.transition = "left 2s ease-in-out, top 2s ease-in-out";
+    }
+
+    function iniciarCronometro() {
+      const tiempoElemento = document.getElementById("tiempo");
+      segundos--;
+
+      const intervalo = setInterval(function() {
+        tiempoElemento.textContent = segundos;        
+
+        if (segundos === 0 && cont<6) {
+          clearInterval(intervalo); // Detiene el cronómetro cuando alcanza 0 segundos
+          Swal.fire({
+          title:'Perdiste el juego :(', text:'¡Animo para la proxima!', icon: 'error',
+            background: '#F7E384' , color: '#716add' , imageUrl: 'img/triste.png' ,imageWidth: 200, imageHeight: 200, });
+          cont=0;
+          boton.style.display="none";
+          cronometro.style.display = "none";
+        } else {
+          segundos--;
+        }
+      }, 1000); // Actualiza cada 1 segundo (1000 milisegundos)
+    }
+
+    /*
+    let activo=true;  
+    function cambio(){
+        if (activo) {
+          activo=false;
+          mostrarBoton()
+        }else {
+          activo=true;
+          pararBoton()
+        }
+    }*/
+  </script>
+
 </body>
 
 </html>
