--- a/assets/GIFS/gif3.html
+++ b/assets/GIFS/gif3.html
@@ -5,12 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GIF en el Centro</title>
+     <meta content="width=device-width, initial-scale=1.0" name="viewport">
+     <meta content="Free HTML Templates" name="keywords">
+     <meta content="Free HTML Templates" name="description">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <style>
         /* Estilos para el fondo rosado */
         body {
-            background-color: rgb(192, 255, 241);
+            background-color: rgb(235, 212, 11);
             margin: 0;
             display: flex;
             justify-content: center;
@@ -27,6 +30,8 @@
             background-color: rgba(255, 255, 255, 0.8);
             /* Fondo blanco semitransparente */
         }
+
+        
     </style>
     <!-- Customized Bootstrap Stylesheet -->
     <link href="styles.css" rel="stylesheet">
@@ -34,7 +39,7 @@
 
 <body>
     <div class="gif-container">
-        <img src="imgs/1063167_4a989.gif" alt="GIF en el centro">
+        <img src="imgs/i-love-you-more.gif" alt="GIF en el centro">
     </div>
 
     <footer>
