--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 <body>
 
-<div id="cronometro" style="display: none;">Tiempo restante: <span id="tiempo">4</span> segundos</div>
+<div id="cronometro" style="display: none;">Tiempo restante: <span id="tiempo">5</span> segundos</div>
 
   <!-- Topbar Start -->
   <div class="container-fluid bg-primary py-3 d-none d-md-block">
@@ -82,7 +82,7 @@
           <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
             <div class="navbar-nav ml-auto py-0">
               <a href="index.html" class="nav-item nav-link active">Inicio</a>
-              <a href="product.html" class="nav-item nav-link">Product</a>
+              <a href="about.html" class="nav-item nav-link">Dame un Click!</a>
             </div>
             <a href="index.html" class="navbar-brand mx-5 d-none d-lg-block">
               <h1 class="m-0 display-4 text-primary"><span class="text-secondary">Mi </span>Amor</h1>
@@ -194,7 +194,7 @@
   <script src="mail/jqBootstrapValidation.min.js"></script>
   <script src="mail/contact.js"></script>
 
-  <!-- Template Javascript -->
+  <!-- plantilla Javascript -->
   <script src="js/main.js"></script>
   
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
@@ -207,7 +207,7 @@
   //variables
     let cont=0;
     const cronometro = document.getElementById("cronometro");
-    let segundos = 4; // Establece el tiempo inicial en segundos
+    let segundos = 5; // Establece el tiempo inicial en segundos
 
     // Mostrar el botón después de un breve retraso (por ejemplo, 2 segundos)
     setTimeout(function() {
