--- a/assets/Flor/index.html
+++ b/assets/Flor/index.html
@@ -3,10 +3,13 @@
 
 <head>
   <meta charset="utf-8">
-  <title>iCREAM - Ice Cream Shop Website Template</title>
+  <title>Mi Regalo para ti</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="Free HTML Templates" name="keywords">
-  <meta content="Free HTML Templates" name="description">  
+  <meta content="Free HTML Templates" name="description">
+
+  <!-- Favicon -->
+  <link href="../../img/favicon.ico" rel="icon">
 
   <!-- Customized Bootstrap Stylesheet -->
   <link href="styles.css" rel="stylesheet">
