--- a/gallery.html
+++ b/gallery.html
@@ -2,14 +2,14 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <title>iCREAM - Ice Cream Shop Website Template</title>
-    <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="Free HTML Templates" name="keywords">
-    <meta content="Free HTML Templates" name="description">
+     <meta charset="utf-8">
+     <title>Mi Regalo para ti</title>
+     <meta content="width=device-width, initial-scale=1.0" name="viewport">
+     <meta content="Free HTML Templates" name="keywords">
+     <meta content="Free HTML Templates" name="description">
 
-    <!-- Favicon -->
-    <link href="img/favicon.ico" rel="icon">
+     <!-- Favicon -->
+     <link href="img/favicon.ico" rel="icon">
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -27,82 +27,81 @@
 </head>
 
 <body>
-   <!-- Topbar Start -->
-   <div class="container-fluid bg-primary py-3 d-none d-md-block">
-       <div class="container">
-           <div class="row">
-               <div class="col-md-6 text-center text-lg-left mb-2 mb-lg-0">
-                   <div class="d-inline-flex align-items-center">
-                       <span class="text-white">|</span>
-                       <a class="text-white px-3" href="assets/not-found/index.html" target="_blank">Ayuda</a>
-                       <span class="text-white">|</span>
-                   </div>
-               </div>
-               <div class="col-md-6 text-center text-lg-right">
-                   <div class="d-inline-flex align-items-center">
-                       <a class="text-white px-3" href="https://www.facebook.com/sergioandres.toro.1" target="_blank">
-                           <i class="fab fa-facebook-f"></i>
-                       </a>
-                       <a class="text-white px-3" href="assets/not-found/index.html" target="_blank">
-                           <i class="fab fa-twitter"></i>
-                       </a>
-                       <a class="text-white px-3"
-                           href="https://www.linkedin.com/in/sergio-andres-toro-mendoza-32471b196/" target="_blank">
-                           <i class="fab fa-linkedin-in"></i>
-                       </a>
-                       <a class="text-white px-3" href="https://www.instagram.com/andres_toro19_/" target="_blank">
-                           <i class="fab fa-instagram"></i>
-                       </a>
-                       <a class="text-white pl-3" href="https://www.youtube.com/@arrozchino3436/about" target="_blank">
-                           <i class="fab fa-youtube"></i>
-                       </a>
-                   </div>
-               </div>
-           </div>
-       </div>
-   </div>
-   <!-- Topbar End -->
+  <!-- Topbar Start -->
+  <div class="container-fluid bg-primary py-3 d-none d-md-block">
+      <div class="container">
+          <div class="row">
+              <div class="col-md-6 text-center text-lg-left mb-2 mb-lg-0">
+                  <div class="d-inline-flex align-items-center">
+                      <a class="text-white pr-3" href="assets/not-found/index.html" target="_blank">Ayuda</a>
+                      <span class="text-white">|</span>
+                      <a class="text-white pl-3" href="assets/GIFS/gif3.html">Te Amo</a>
+                  </div>
+              </div>
+              <div class="col-md-6 text-center text-lg-right">
+                  <div class="d-inline-flex align-items-center">
+                      <a class="text-white px-3"
+                          href="https://www.facebook.com/photo/?fbid=708521491305118&set=pb.100064418195652.-2207520000"
+                          target="_blank">
+                          <i class="fab fa-facebook-f"></i>
+                      </a>
+                      <a class="text-white px-3" href="https://www.instagram.com/p/CxbS1QePWh2/" target="_blank">
+                          <i class="fab fa-instagram"></i>
+                      </a>
+                      <a class="text-white pl-3"
+                          href="https://www.youtube.com/watch?v=_gU9kX7zBxc&ab_channel=%E2%80%A2Liliam%E2%80%A2"
+                          target="_blank">
+                          <i class="fab fa-youtube"></i>
+                          <!--https://www.youtube.com/@arrozchino3436/featured      style="display: none;"   -->
+                      </a>
+                  </div>
+              </div>
+          </div>
+      </div>
+  </div>
+  <!-- Topbar End -->
+  <!--para que no se vea un blanco ahi-->
+  <div class="container-fluid bg-primary py-4 d-none d-md-block capa-superpuesta"></div>
 
-   <!-- Navbar Start -->
-   <div class="container-fluid position-relative nav-bar p-0">
-       <div class="container-lg position-relative p-0 px-lg-3" style="z-index: 9;">
-           <nav class="navbar navbar-expand-lg bg-white navbar-light shadow p-lg-0">
-               <a href="index.html" class="navbar-brand d-block d-lg-none">
-                   <h1 class="m-0 display-4 text-primary"><span class="text-secondary">Mi </span>Amor</h1>
-               </a>
-               <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
-                   <span class="navbar-toggler-icon"></span>
-               </button>
-               <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
-                   <div class="navbar-nav ml-auto py-0">
-                       <a href="index.html" class="nav-item nav-link active">Home</a>
-                       <a href="about.html" class="nav-item nav-link">About</a>
-                       <a href="product.html" class="nav-item nav-link">Product</a>
-                   </div>
-                   <a href="index.html" class="navbar-brand mx-5 d-none d-lg-block">
-                       <h1 class="m-0 display-4 text-primary"><span class="text-secondary">Mi </span>Amor</h1>
-                   </a>
-                   <div class="navbar-nav mr-auto py-0">
-                       <a href="assets/Flor/index.html" class="nav-item nav-link">Florecitas :3</a>
-                       <a href="gallery.html" class="nav-item nav-link">Gallery</a>
-                       <a href="contact.html" class="nav-item nav-link">Contact</a>
-                   </div>
-               </div>
-           </nav>
-       </div>
-   </div>
-   <!-- Navbar End -->
+
+
+
+
+  <!-- Navbar Start -->
+  <div class="move">
+      <div class="container-fluid position-relative nav-bar p-0">
+          <div class="container-lg position-relative p-0 px-lg-3" style="z-index: 9;">
+              <nav class="navbar navbar-expand-lg bg-white navbar-light shadow p-lg-0">
+                  <a href="index.html" class="navbar-brand d-block d-lg-none">
+                      <h1 class="m-0 display-4 text-primary"><span class="text-secondary">Mi </span>Amor</h1>
+                  </a>
+                  <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
+                      <span class="navbar-toggler-icon"></span>
+                  </button>
+                  <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
+                      <div class="navbar-nav ml-auto py-0">
+                          <a href="index.html" class="nav-item nav-link active">Inicio</a>
+                          <a href="about.html" class="nav-item nav-link">Dame un Click!</a>
+                      </div>
+                      <a href="index.html" class="navbar-brand mx-5 d-none d-lg-block">
+                          <h1 class="m-0 display-4 text-primary"><span class="text-secondary">Mi </span>Amor</h1>
+                      </a>
+                      <div class="navbar-nav mr-auto py-0">
+                          <a href="assets/Flor/index.html" class="nav-item nav-link">Florecitas :3</a>
+                          <a href="gallery.html" class="nav-item nav-link">collage</a>
+                      </div>
+                  </div>
+              </nav>
+          </div>
+      </div>
+  </div>
+  <!-- Navbar End -->
 
 
     <!-- Header Start -->
     <div class="jumbotron jumbotron-fluid page-header" style="margin-bottom: 90px;">
         <div class="container text-center py-5">
-            <h1 class="text-white display-3 mt-lg-5">Gallery</h1>
-            <div class="d-inline-flex align-items-center text-white">
-                <p class="m-0"><a class="text-white" href="">Home</a></p>
-                <i class="fa fa-circle px-3"></i>
-                <p class="m-0">Gallery</p>
-            </div>
+            <h1 class="text-white display-3 mt-lg-5">Galeria nuestra amol</h1>            
         </div>
     </div>
     <!-- Header End -->
@@ -113,64 +112,54 @@
         <div class="container py-5">
             <div class="row justify-content-center">
                 <div class="col-lg-5">
-                    <h1 class="section-title position-relative text-center mb-5">Delicious Ice Cream Made From Our Very Own Organic Milk</h1>
+                    <h1 class="section-title position-relative text-center mb-5">Aqui subiremos nuestras mejores fotos y perduraran por siempre como nuestro amor.</h1>
                 </div>
-            </div>
-            <div class="row">
-                <div class="col-12 text-center">
-                    <ul class="list-inline mb-4 pb-2" id="portfolio-flters">
-                        <li class="btn btn-sm btn-outline-primary m-1 active"  data-filter="*">All</li>
-                        <li class="btn btn-sm btn-outline-primary m-1" data-filter=".first">Cone</li>
-                        <li class="btn btn-sm btn-outline-primary m-1" data-filter=".second">Vanilla</li>
-                        <li class="btn btn-sm btn-outline-primary m-1" data-filter=".third">Chocolate</li>
-                    </ul>
-                </div>
-            </div>
+            </div>           
             <div class="row m-0 portfolio-container">
-                <div class="col-lg-4 col-md-6 p-0 portfolio-item first">
+                <div class="col-lg-4 col-md-6 p-0 portfolio-item second">
                     <div class="position-relative overflow-hidden">
-                        <img class="img-fluid w-100" src="img/portfolio-1.jpg" alt="">
-                        <a class="portfolio-btn" href="img/portfolio-1.jpg" data-lightbox="portfolio">
+                        <img class="img-fluid w-100" src="img/ld1.jpg" alt="">
+                        <a class="portfolio-btn" href="img/ld1.jpg" data-lightbox="portfolio">
                             <i class="fa fa-plus text-primary" style="font-size: 60px;"></i>
                         </a>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 p-0 portfolio-item second">
                     <div class="position-relative overflow-hidden">
-                        <img class="img-fluid w-100" src="img/portfolio-2.jpg" alt="">
-                        <a class="portfolio-btn" href="img/portfolio-2.jpg" data-lightbox="portfolio">
+                        <img class="img-fluid w-100" src="img/ld7.jpg" alt="">
+                        <a class="portfolio-btn" href="img/ld7.jpg" data-lightbox="portfolio">
                             <i class="fa fa-plus text-primary" style="font-size: 60px;"></i>
                         </a>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 p-0 portfolio-item third">
                     <div class="position-relative overflow-hidden">
-                        <img class="img-fluid w-100" src="img/portfolio-3.jpg" alt="">
-                        <a class="portfolio-btn" href="img/portfolio-3.jpg" data-lightbox="portfolio">
+                        <img class="img-fluid w-100" src="img/ld3.jpg" alt="">
+                        <a class="portfolio-btn" href="img/ld3.jpg" data-lightbox="portfolio">
                             <i class="fa fa-plus text-primary" style="font-size: 60px;"></i>
                         </a>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 p-0 portfolio-item first">
                     <div class="position-relative overflow-hidden">
-                        <img class="img-fluid w-100" src="img/portfolio-4.jpg" alt="">
-                        <a class="portfolio-btn" href="img/portfolio-4.jpg" data-lightbox="portfolio">
+                        <img class="img-fluid w-100" src="img/ld8.jpg" alt="">
+                        <a class="portfolio-btn" href="img/ld8.jpg" data-lightbox="portfolio">
                             <i class="fa fa-plus text-primary" style="font-size: 60px;"></i>
                         </a>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 p-0 portfolio-item second">
                     <div class="position-relative overflow-hidden">
-                        <img class="img-fluid w-100" src="img/portfolio-5.jpg" alt="">
-                        <a class="portfolio-btn" href="img/portfolio-5.jpg" data-lightbox="portfolio">
+                        <img class="img-fluid w-100" src="img/ld5.jpg" alt="">
+                        <a class="portfolio-btn" href="img/ld5.jpg" data-lightbox="portfolio">
                             <i class="fa fa-plus text-primary" style="font-size: 60px;"></i>
                         </a>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 p-0 portfolio-item third">
                     <div class="position-relative overflow-hidden">
-                        <img class="img-fluid w-100" src="img/portfolio-6.jpg" alt="">
-                        <a class="portfolio-btn" href="img/portfolio-6.jpg" data-lightbox="portfolio">
+                        <img class="img-fluid w-100" src="img/ld6.jpg" alt="">
+                        <a class="portfolio-btn" href="img/ld6.jpg" data-lightbox="portfolio">
                             <i class="fa fa-plus text-primary" style="font-size: 60px;"></i>
                         </a>
                     </div>
@@ -180,45 +169,20 @@
     </div>
     <!-- Portfolio End -->
 
+ <!-- Footer Start -->
+ <div class="container-fluid footer bg-light py-5" style="margin-top: 90px;">
+     <div class="container text-center py-5">
+         <div class="row">
+             <div class="col-12 mb-4">
+                 <a href="index.html" class="navbar-brand m-0">                    
 
-    <!-- Footer Start -->
-    <div class="container-fluid footer bg-light py-5" style="margin-top: 90px;">
-        <div class="container text-center py-5">
-            <div class="row">
-                <div class="col-12 mb-4">
-                    <a href="index.html" class="navbar-brand m-0">
-                        <h1 class="m-0 mt-n2 display-4 text-primary"><span class="text-secondary">i</span>CREAM</h1>
-                    </a>
-                </div>
-                <div class="col-12 mb-4">
-                    <a class="btn btn-outline-secondary btn-social mr-2" href="#"><i class="fab fa-twitter"></i></a>
-                    <a class="btn btn-outline-secondary btn-social mr-2" href="#"><i class="fab fa-facebook-f"></i></a>
-                    <a class="btn btn-outline-secondary btn-social mr-2" href="#"><i class="fab fa-linkedin-in"></i></a>
-                    <a class="btn btn-outline-secondary btn-social" href="#"><i class="fab fa-instagram"></i></a>
-                </div>
-                <div class="col-12 mt-2 mb-4">
-                    <div class="row">
-                        <div class="col-sm-6 text-center text-sm-right border-right mb-3 mb-sm-0">
-                            <h5 class="font-weight-bold mb-2">Get In Touch</h5>
-                            <p class="mb-2">123 Street, New York, USA</p>
-                            <p class="mb-0">+012 345 67890</p>
-                        </div>
-                        <div class="col-sm-6 text-center text-sm-left">
-                            <h5 class="font-weight-bold mb-2">Opening Hours</h5>
-                            <p class="mb-2">Mon – Sat, 8AM – 5PM</p>
-                            <p class="mb-0">Sunday: Closed</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-12">
-                    <p class="m-0">&copy; <a href="#">Domain</a>. All Rights Reserved. Designed by <a href="https://htmlcodex.com">HTML Codex</a>
-                    </p>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Footer End -->
+                     <img class="w-25" src="img/feliz.png" alt="Image">
 
+                 </a>
+             </div>
+         </div>
+     </div>
+ </div>
 
     <!-- Back to Top -->
     <a href="#" class="btn btn-secondary px-2 back-to-top"><i class="fa fa-angle-double-up"></i></a>
